# hack

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  tests.yaml
code/src/rebelist/hack/: console.py
code/src/rebelist/hack/commands/jira/: services.py
code/src/rebelist/hack/config/: container.py  settings.py
code/src/rebelist/hack/connectors/: __init__.py  agents.py  jira.py
code/src/rebelist/hack/models/: jira.py
code/tests/: conftest.py
code/tests/hack/: test_console.py
code/tests/hack/commands/jira/: test_services.py  test_ticket_command.py
code/tests/hack/config/: test_container.py  test_settings.py
code/tests/hack/connectors/: test_agents.py
src/rebelist/hack/: console.py
src/rebelist/hack/commands/git/: __init__.py  branch_command.py  commit_command.py
src/rebelist/hack/commands/jira/: __init__.py  services.py  ticket_command.py
src/rebelist/hack/commands/score/: __init__.py  delete_command.py  export_command.py  list_command.py  save_command.py
src/rebelist/hack/config/: config.template.yaml  container.py  settings.py  template.config.yaml
src/rebelist/hack/connectors/: agents.py  jira.py
src/rebelist/hack/domain/: models.py  score_log.py
src/rebelist/hack/infrastructure/agent/: __init__.py
src/rebelist/hack/infrastructure/agent/composers/: __init__.py  jira.py  score.py
src/rebelist/hack/infrastructure/git/: __init__.py  agents.py  manager.py
src/rebelist/hack/infrastructure/jira/: __init__.py  adapter.py
src/rebelist/hack/infrastructure/sqlite/: __init__.py  agents.py  repository.py
src/rebelist/hack/models/: jira.py
tests/: conftest.py
tests/hack/: test_console.py
tests/hack/commands/git/: test_branch_command.py  test_commit_command.py
tests/hack/commands/jira/: test_ticket_command.py
tests/hack/config/: test_container.py  test_settings.py
tests/hack/connectors/: test_agents.py  test_jira.py
tests/hack/domain/: test_models.py
tests/hack/infrastructure/git/: test_agents.py  test_manager.py
tests/hack/infrastructure/jira/: test_adapter.py  test_agents.py
tests/hack/models/: test_jira.py
tests/integration/: test_main.py
tests/unit/hack/: test_console.py
tests/unit/hack/commands/git/: test_branch_command.py  test_commit_command.py
tests/unit/hack/commands/jira/: test_ticket_command.py
tests/unit/hack/commands/score/: test_delete_all_command.py  test_delete_command.py  test_export_command.py  test_list_command.py  test_save_command.py
tests/unit/hack/config/: test_container.py  test_settings.py
tests/unit/hack/domain/: test_models.py  test_score_log.py
tests/unit/hack/infrastructure/agent/composers/: test_git.py  test_jira.py  test_score.py
tests/unit/hack/infrastructure/git/: test_agents.py  test_manager.py
tests/unit/hack/infrastructure/jira/: test_adapter.py  test_agents.py
tests/unit/hack/infrastructure/sqlite/: test_agents.py  test_repository.py
